# stasis-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  REDME.md  config.toml
.github/workflows/: ci.yml
agent-framework/: Cargo.toml
agent-framework/src/: lib.rs
config-layer/: Cargo.toml
config-layer/src/: lib.rs
resonance-core/: Cargo.toml
resonance-core/src/: lib.rs
src/: main.rs
state-crystal/: Cargo.toml
state-crystal/src/: lib.rs
